# grimoirelab

./: pyproject.toml  requirements.txt  setup.py
default-grimoirelab-settings/: identities.yml  organizations.json  projects.json  setup.cfg
docker-compose/: docker-compose.yml
kubernetes/secure/: 50-mordred-config.yml  52-mordred-config-orgs.yml  53-mordred-secret.yml
releases/: 0.2.69
utils/: build_grimoirelab
