[general]
short_name = GrimoireLab
update = true
min_update_delay = 60
debug = false
logs_dir = /home/bitergia/logs
aliases_file = /home/bitergia/conf/aliases.json

[projects]
projects_file = /home/bitergia/conf/projects.json

[es_collection]
#Url OpenSearch
url = http://elasticsearch:9200

[es_enrichment]
#Url OpenSearch
url = http://elasticsearch:9200
autorefresh = true

[sortinghat]
host = mariadb
port = 50000
user = root
password =
database = demo_sh
load_orgs = true
orgs_file = /home/bitergia/conf/organizations.json
autoprofile = [github, pipermail, git]
matching = [email]
sleep_for = 100
unaffiliated_group = Unknown
affiliate = true
strict_mapping = false
reset_on_load = false
identities_file = [/home/bitergia/conf/identities.yml]
identities_format = grimoirelab

[panels]
kibiter_time_from = now-2y
kibiter_default_index = git
kibiter_url = http://kibiter:5601
kibiter_version = 6.1.4-1
gitlab-issues = false
gitlab-merges = false

[phases]
collection = true
identities = true
enrichment = true
panels = true

[git]
raw_index = git_demo_raw
enriched_index = git_demo_enriched
latest-items = true
studies = [enrich_demography:git, enrich_areas_of_code:git, enrich_onion:git]

[github]
api-token = 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
#enterprise-url = https://github.com/bancolombia
raw_index = github_demo_raw
sleep-for-rate = true
sleep-time = "300"
enriched_index = github_demo_enriched

[github:issue]
raw_index = github_raw
enriched_index = github_enriched
api-token = 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
category = issue
sleep-for-rate = true
no-archive = true
studies = [enrich_onion:github]

[github:pull]
raw_index = github-pull_raw
enriched_index = github-pull_enriched
api-token = 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
category = pull_request
sleep-for-rate = true
no-archive = true
studies = []

[enrich_onion:github]
in_index_iss = github_issues_onion-src
in_index_prs = github_prs_onion-src
out_index_iss = github-issues-onion_enriched
out_index_prs = github-prs-onion_enriched

[enrich_geolocation:user]
location_field = user_location
geolocation_field = user_geolocation

[enrich_geolocation:assignee]
location_field = assignee_location
geolocation_field = assignee_geolocation

[enrich_extra_data:github]
json_url = https://gist.githubusercontent.com/zhquan/bb48654bed8a835ab2ba9a149230b11a/raw/5eef38de508e0a99fa9772db8aef114042e82e47/bitergia-example.txt

[enrich_backlog_analysis]
out_index = github_enrich_backlog
interval_days = 7
reduced_labels = [bug,enhancement]
map_label = [others, bugs, enhancements]

[enrich_demography:github]

[enrich_demography:git]

[enrich_areas_of_code:git]
in_index = git_demo_raw
out_index = git-aoc_demo_enriched

[enrich_onion:git]
in_index = git
out_index = git-onion_demo_enriched
contribs_field = hash